
[package]
name = "vim_bot"
version = "0.1.0"
authors = ["justin@restivo.me"]
edition = "2018"

[dependencies]
rand = "0.8.3"
serenity = { version = "0.10.2", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
