
[package]
name = "vim_bot"
version = "0.1.0"
authors = ["justin@restivo.me"]
edition = "2018"

[dependencies]
rand = "0.8.3"
serenity = { version = "0.10.2", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model", "voice", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current", features = ["builtin-queue"]}
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
